# tree-sitter-dbc

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  flake.nix  go.mod  grammar.js  grammar_example.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-dbc.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dbc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDbcTests/: TreeSitterDbcTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: dbc.txt
