[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-dbc"
description = "CANbus DBC bus descriptor file format"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "dbc"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Xander Cesari", email = "xander@merriman.industries" }]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/merrimanind/tree-sitter-dbc"
Funding = "https://github.com/MerrimanInd/tree-sitter-dbc"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
